@startuml

package "Product Aggregate" {

    class Product <<AggregateRoot>> {
        + Id : Guid <<PK>>
        + Name : string
        + Description : string?
        + Audience : Audience?
        + IsActive : bool
        + CategoryId : Guid <<FK>>
        + CreatedAt : DateTime
        + UpdatedAt : DateTime
        --
        + {static} Create(name, description, audience, categoryId) : Product
        .. raises ProductCreatedEvent ..
        + AddVariant(color) : ProductVariant
        + AddTag(tagId) : void
        + Update(name, description, audience, categoryId) : void
        .. raises ProductUpdatedEvent ..
        + Publish() : void
        .. raises ProductUpdatedEvent ..
        + Unpublish() : void
        .. raises ProductUpdatedEvent ..
        + Delete() : void
        .. raises ProductDeletedEvent ..
    }

    class ProductVariant <<Entity>> {
        + Id : Guid <<PK>>
        + ProductId : Guid <<FK>>
        + Color : string
        --
        + {static} Create(productId, color) : ProductVariant
        + AddSku(sizeId, price, stock) : ProductSku
        + AddImage(url, publicId, isPrimary, sortOrder) : void
    }

    class ProductSku <<Entity>> {
        + Id : Guid <<PK>>
        + ProductVariantId : Guid <<FK>>
        + SizeId : Guid? <<FK>>
        + Price : decimal
        + StockQuantity : int
        --
        + {static} Create(variantId, sizeId, price, stock) : ProductSku
        + UpdatePrice(price) : void
        + AddStock(quantity) : void
        + DeductStock(quantity) : void
    }

    class ProductImage <<Entity>> {
        + Id : Guid <<PK>>
        + ProductVariantId : Guid <<FK>>
        + Url : string
        + PublicId : string
        + IsPrimary : bool
        + SortOrder : int
        --
        + {static} Create(variantId, url, publicId, isPrimary, sortOrder) : ProductImage
    }

    class ProductTag <<Entity>> {
        + ProductId : Guid <<FK>>
        + TagId : Guid <<FK>>
        --
        + {static} Create(productId, tagId) : ProductTag
    }

    enum Audience {
        Men
        Women
    }

    Product "1" *-- "0..*" ProductVariant
    Product "1" *-- "0..*" ProductTag
    Product --> Audience
    ProductVariant "1" *-- "1..*" ProductSku
    ProductVariant "1" *-- "0..*" ProductImage
}

note right of Product
    CategoryId → Category Entity
    Audience nullable，包包/帽子等無性別限定商品為 null
    IsActive = false 時前台不顯示（Unpublish）
end note

note right of ProductSku
    SizeId → Size Entity
    SizeId nullable，包包無尺寸
end note

note right of ProductTag
    TagId → Tag Entity
    Tag 涵蓋：季節、風格、長短等
end note

@enduml
